--- a/index.html
+++ b/index.html
@@ -109,7 +109,15 @@
     </style>
 </head>
 <body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17967836037"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-17967836037');
+</script>
 <header>
     <h1>GALICIA HOME ONLINE</h1>
     <nav>
