--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
 
   gtag('config', 'AW-17967836037');
 </script>
+    <!-- Event snippet for Vista de página conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17967836037/2_9VCI6Klv0bEIXX3fdC',
+      'value': 1.0,
+      'currency': 'ARS'
+  });
+</script>
 <header>
     <h1>GALICIA HOME ONLINE</h1>
     <nav>
